<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.SignActivity"
    android:background="@drawable/gradient">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_chrome_reader"
            />

        <TextView
            android:id="@+id/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:text="@string/sing_up"
            android:textColor="@color/colorWhite"
            android:textSize="24dp"

            />
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/TextView"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="20dp"
         android:padding="20dp"
         app:cardCornerRadius="24dp"
         app:cardElevation="4dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingTop="20dp"
             android:paddingBottom="20dp"
             android:paddingLeft="20dp"
             android:paddingRight="15dp"
             >
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="@string/name"/>
             <EditText
                 android:id="@+id/txtNomb"
                 android:drawableRight="@drawable/ic_person"
                 android:hint="@string/name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingEnd="12dp"
                 android:singleLine="true"
                 />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="@string/email"/>

             <EditText
                 android:id="@+id/txtEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableRight="@drawable/ic_email"
                 android:hint="@string/email"
                 android:paddingEnd="12dp"
                 android:singleLine="true"
                 />

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="@string/password"/>
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/inputPass"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:passwordToggleEnabled="true"
                 app:hintEnabled="false"
                 app:errorEnabled="true"
                 >
                 <EditText
                     android:id="@+id/txtPassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawableRight="@drawable/ic_lock"
                     android:imeOptions="actionGo"
                     android:inputType="textPassword"
                     android:layout_alignParentBottom="true"
                     android:hint="@string/password"
                     android:singleLine="true"
                     >

                 </EditText>
             </com.google.android.material.textfield.TextInputLayout>
             <Button
                 android:id="@+id/btnSign"
                 android:layout_marginTop="6dp"
                 android:background="@drawable/gradient_dt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/btnSing"
                 android:textColor="@color/colorWhite"

                 />
         </LinearLayout>


     </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/have_an_account"

            />

    </RelativeLayout>



</ScrollView>